# freeq

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  core  docker-compose.yml  graph.fabro  motd.txt  nginx.conf  run.json
.cargo/: audit.toml
.fabro/: Dockerfile.tools  README.md  project.toml  verify.sh
.fabro/automations/: bug-hunt.toml  dep-audit.toml  test-coverage.toml
.github/workflows/: ci.yml  release.yml
1d/987e4aaaab/: metadata.json
63/ad855e91ab/: metadata.json
64/c41246cfe8/: metadata.json
69/f835105aa0/: metadata.json
75/930b486184/: metadata.json
83/7898979a59/: metadata.json
Freeq.WinUI/: Freeq.WinUI.slnx
Freeq.WinUI/Freeq.WinUI/: App.xaml  App.xaml.cs  Freeq.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
b6/1499d9b674/: metadata.json
d1/51791707f3/: metadata.json
db/cf81c041fc/: metadata.json
dc/3e6d938cdc/: metadata.json
dd/67cbac4100/: metadata.json
deploy/: README.md  av-deploy.sh  deploy.sh  freeq-server.service  nginx-irc-freeq-at.conf  setup.sh
deploy/irc/: Dockerfile  deploy.sh
deploy/miren/: Dockerfile  README.md  deploy.sh
deploy/new-host/: README.md  cloud-init.yaml  main.tf
deploy/staging/: Dockerfile  deploy.sh
docs/: APP-STORE-DEPLOYMENT-SETUP.md  AV-QUIC-MIGRATION.md  BOT-QUICKSTART.md  COMPANY-DEPLOYMENT-SECURITY-ANALYSIS.md  COMPANY-ENCRYPTED-CHANNELS.md  COMPANY-HARDENING-PLAN.md  DEMO.md  ENCRYPTION.md  Features.md  FutureDirection.md  HANDOFF-RFC.md  IDLE-GUEST-FALLBACK-FIX.md  KNOWN-LIMITATIONS.md  MACOS-GAPS.md  MULTILINE-CLIENT-COMPATIBILITY.md  PI-BRIDGE.md  PROTOCOL.md  RELEASE-PLAN-1.0.md  S2S-AUTH-PLAN.md  SDK-PROPOSAL.md  SECURITY.md  SELF-HOSTING-END-TO-END.md  START-HERE.md  SYNC-AUDIT.md  VC-BOOTSTRAPPED-CHANNEL-E2EE.md  VOICE-E2E-TEST-GRID.md  WEB-APP-PLAN.md  WHATS-NEW.md  agents.md  api-reference.md  authentication.md  bots.md  federation.md  ios-app.md  moderation.md  proposal-web-infra.md  self-hosting.md  server-did.md  web-client.md  what-is-freeq.md
docs/ircv3/: atproto-challenge.md
docs/proposals/: file-upload-hardening.md
f5/bda1c39264/: metadata.json
freeq-agent-kit/examples/claude-mcp/: .gitignore  Cargo.toml  README.md  SKILL.md
freeq-agent-kit/examples/claude-mcp/roles/: README.md  ada.md  otto.md  quant.md  sentinel.md
freeq-agent-kit/examples/claude-mcp/src/: discover.rs  lib.rs  orchestrator.rs  streaming_stt.rs  tile_overlay.rs  video_face.rs
freeq-agent-kit/src/: addressing.rs  lib.rs  speech.rs  vad.rs
freeq-android/: .gitignore  README.md  build-rust.sh  settings.gradle.kts
freeq-android/freeq/: build.gradle.kts  proguard-rules.pro
freeq-app/: Procfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
freeq-app/e2e/: channels.spec.ts  connect.spec.ts  dms.spec.ts  edge-cases.spec.ts  helpers.ts  messaging.spec.ts  mobile.spec.ts  reactions.spec.ts  resilience.spec.ts  screenshare.spec.ts  screenshots.spec.ts  theme.spec.ts  ui-elements.spec.ts
freeq-app/public/: manifest.json  sw.js
freeq-app/scripts/: encoding-lite-cjs.cjs  esm-shim-require.cjs
freeq-app/src/: App.tsx  dm-refresh.test.ts  index.css  main.tsx  (+4 more)
freeq-app/src-tauri/: Cargo.toml  tauri.conf.json
freeq-auth-broker/: Cargo.toml  build.rs
freeq-av/: Cargo.toml
freeq-av-client/: Cargo.toml
freeq-av-image/: Cargo.toml
freeq-av-image/src/: main.rs
freeq-bot-id/: README.md
freeq-bot-kit-js/: README.md  package-lock.json  package.json  tsconfig.json
freeq-bots/: Cargo.toml  README.md
freeq-eliza/: AMBIENT_RESEARCH_PLAN.md  Cargo.toml  DEMO.md  SMART_HANDOFF_PLAN.md  VOICE_LATENCY_PLAN.md
freeq-eliza/examples/: ascii_bot_demo.rs  ascii_demo.rs  ascii_glitch_demo.rs  ascii_rain_demo.rs  face3d_demo.rs  legacy_demo.rs  preview.rs  southpark_demo.rs  stream_probe.rs  vector_demo.rs  vision_probe.rs  voice_probe.rs
freeq-eliza/scripts/: envelope.py
freeq-eliza/src/: ambient.rs  brain_seam.rs  character_profile.rs  decisions.rs  diagram.rs  identity.rs  imagegen.rs  irc.rs  lib.rs  main.rs  memory.rs  mitosis.rs  persona.rs  proactive.rs  qa.rs  research.rs  social.rs  social_feed.rs  streaming_stt.rs  stt.rs  tts.rs  video.rs  video_alexandria.rs  video_ascii.rs  video_face3d.rs  video_particles.rs  video_southpark.rs  video_vector.rs  vision.rs  whiteboard.rs
freeq-eliza/tests/: e2e_two_servers_test.rs  identity_test.rs
freeq-ios/: AV-TESTING-PLAN.md  build-rust.sh  project.yml
freeq-macos/: .gitignore  FEATURE-PARITY-PLAN.md  Package.swift  build-rust.sh  project.yml
freeq-sdk/: Cargo.toml
freeq-sdk-ffi/: Cargo.toml  build.rs  uniffi.toml
freeq-sdk-ffi/src/: audio_buffer.rs  freeq.udl  lib.rs
freeq-sdk-js/: package-lock.json
freeq-server/: Cargo.toml
freeq-site/: .git_commit  .gitignore  app.py  deploy.sh  requirements.txt
freeq-transcriber-bot/: Cargo.toml  README.md
freeq-transcriber-bot/src/: audio_tap.rs  identity.rs  irc.rs  lib.rs  main.rs  stt.rs  summary.rs
freeq-transcriber-bot/tests/: audio_tap_test.rs  e2e_two_servers_test.rs  identity_test.rs
freeq-tui/: Cargo.toml
freeq-utopia/: Cargo.toml  README.md
freeq-web/: index.html  sw.js
freeq-windows-app/: App.xaml  App.xaml.cs  Freeq.Windows.App.csproj
freeq-windows-core/: Cargo.toml
freeq-windows-core/src/: core.rs  error.rs  event.rs  lib.rs
freeq-windows-core/src/bridge/: abi.rs  callback.rs  envelope.rs  mod.rs
freeqcc/: PLAN-AGENT-CONTROL.md  PLAN.md  README.md  SECURITY-AUDIT.md  package-lock.json  package.json  tsconfig.json
irc-at-sdk/: Cargo.toml
irc-at-tui/: Cargo.toml
irc-server/: Cargo.toml  test-client.html
lexicons/: README.md  at.freeq.character.json  at.freeq.persona.json
scripts/: build-docs.sh  demo.sh  iroh-id-to-multibase.py  lint-federation.sh  pi-inbox.py  pi-merge-input.py  run-acceptance-tests.sh  run-local-tests.sh  run-pi-bridge.sh  run-pi-session.sh  run-s2s-tests.sh  setup-demo-policy.sh  smoke-multiline.mjs  start-test-servers.sh  test-local-e2e.sh  verify-demo.sh
(+665 files in other folders)
