[package]
name = "freeq-eliza"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Eliza — an agent that joins freeq AV calls: transcribes, answers by voice, and shows live visual aids."

[lib]
name = "freeq_eliza"
path = "src/lib.rs"

[[bin]]
name = "freeq-eliza"
path = "src/main.rs"

[dependencies]
# Identity + IRC + crypto for SASL
freeq-sdk = { path = "../freeq-sdk", default-features = false, features = ["ring", "rustls-tls", "websocket"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand.workspace = true
bs58 = "0.5"

# Reusable AV layer — MoQ transport, audio capture/playback, and the
# AvSession publish + participant-tap loop.
freeq-av = { path = "../freeq-av" }
# Voice-agent helpers — VAD segmentation, address detection, speech
# post-processing.
freeq-agent-kit = { path = "../freeq-agent-kit" }
# iroh-live stays a direct dep: the video tile renders into its
# VideoSource / VideoFrame types, and `to_whisper_pcm` reads its
# AudioFormat.
iroh-live = { git = "https://github.com/n0-computer/iroh-live", default-features = false, features = ["opus", "h264"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
url = "2"

# STT — whisper.cpp bindings, behind the `stt` feature because the
# build needs cmake + a C++ toolchain. Without the feature the bot
# compiles and runs but treats every audio window as empty (so the
# end-to-end IRC + MoQ + transcript-relay path is still testable with
# a synthetic STT impl).
whisper-rs = { version = "0.14", default-features = false, optional = true }

# Visuals — render the agent's video tile (audio-reactive presence +
# LLM-authored visual aids) as SVG, rasterized to RGBA frames. `image`
# decodes/resizes AI-generated backdrops; `base64` embeds them as SVG
# data URIs.
resvg = "0.45"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

# Optional particle-face renderer (ported avatar visuals) — selected at
# CLI via `--render-backend particles`. The SVG path remains the
# default and still owns scene cards, whiteboards, the ambient HUD chip,
# vision PiP, etc. — composite mode is future work.
ghostly = { git = "https://github.com/chad/ghostly", branch = "main" }

# Async + utility
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
chrono = "0.4"
# SQLite for the conversation-memory module. FTS5 powers the "she
# remembers" feature — past exchanges retrieved on each addressed
# question and injected into the LLM context.
rusqlite = { workspace = true }

[features]
default = []
stt = ["dep:whisper-rs"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
freeq-server = { path = "../freeq-server", default-features = false }

[lints]
workspace = true
