[package]
name = "freeq-sdk-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "freeq_sdk_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
freeq-sdk = { path = "../freeq-sdk", default-features = false, features = ["ring"] }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
once_cell = "1"
chrono = "0.4"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
